--- a/backend/.env
+++ b/backend/.env
@@ -1,14 +1,7 @@
-# Server Configuration
 PORT=5000
 NODE_ENV=development
 
-# MongoDB Connection
-MONGO_URI=mongodb://localhost:27017/maritime_operations
+MONGO_URI=mongodb+srv://amandwivedi1357:aman.d@mydb.hdrbyhi.mongodb.net/?retryWrites=true&w=majority&appName=MYDB
 
-# JWT
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=AMANDWIVEDI1357
 JWT_EXPIRE=30d
-
-# API Rate Limiting
-RATE_LIMIT_WINDOW_MS=15
-RATE_LIMIT_MAX=100
